<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context=".taccrash.CrashMainActivity"
    android:layout_height="match_parent">

    <Button android:id="@+id/java_crash_test"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onJavaCrashClicked"
        android:text="@string/java_crash_test"
        android:textAllCaps="false"/>

    <Button android:id="@+id/anr_crash_test"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onANRCrashClicked"
        android:text="@string/anr_crash_test"
        android:textAllCaps="false"/>

    <Button android:id="@+id/native_crash_test"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNativeCrashClicked"
        android:text="@string/native_crash_test"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="1.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/check_crash_on_console"
        android:autoLink="web"
        android:textSize="16sp"/>

</LinearLayout>